--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -34,9 +34,12 @@ jobs:
           architecture: 'x64'
 
       # Runs a set of commands using the runners shell
-      - name: Run Util Tests
+      - name: Install rdseed
         run: |
-          echo "Hello, Ubuntu!"
+          wget https://github.com/iris-edu-legacy/rdseed/archive/v5.3.1.tar.gz
+          tar -xzvf v5.3.1.tar.gz .
+          ls -ltr
+          
       - name: Run Data Tests
         run: |
           echo "Hello, Ubuntu!"
