--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -37,7 +37,10 @@ jobs:
       - name: Install rdseed
         run: |
           wget https://github.com/iris-edu-legacy/rdseed/archive/v5.3.1.tar.gz
-          tar -xzvf v5.3.1.tar.gz .
+          tar -xzvf v5.3.1.tar.gz
+          cd rdseed-5.3.1/
+          make clean
+          make
           ls -ltr
           
       - name: Run Data Tests
