--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -41,6 +41,7 @@ jobs:
           cd rdseed-5.3.1
           make clean
           make
+          ls -ltr
           rdseed -u
           mv rdseed /usr/local/bin/
           rdseed -u
