rdseed-ubuntu-update

--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -38,6 +38,8 @@ jobs:
         run: |
           cd Dependencies/
           python3 -m setup-dep
+          echo $PATH
+          which ls
 
       - name: Run Data Tests
         run: |
