--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -40,7 +40,7 @@ jobs:
           echo $PATH
           which ls
           cd rdseed
-          tar -xvf v5.3.1.tar.gz
+          tar -xvf v5.3.1-Mod.tar.gz
           cd rdseed-5.3.1
           make clean
           make
