--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -39,12 +39,12 @@ jobs:
           cd Dependencies/
           echo $PATH
           which ls
-          cd rdseed
-          tar -xvf v5.3.1-Mod.tar.gz
-          cd rdseed-5.3.1
-          make clean
-          make
-          #sudo python3 -m setup-dep
+          #cd rdseed
+          #tar -xvf v5.3.1-Mod.tar.gz
+          #cd rdseed-5.3.1
+          #make clean
+          #make
+          sudo python3 -m setup-dep
 
       - name: Run Data Tests
         run: |
