--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -36,7 +36,7 @@ jobs:
           architecture: 'x64'
 
       # Runs a set of commands using the runners shell
-      - name: Run Util Tests
+      - name: Install Dependencies
         run: |
           cd Dependencies
           echo $PATH
