rdseed-ubuntu-update

--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -42,7 +42,9 @@ jobs:
           echo $PATH
           which ls
           python3 -m setup-dep
+        shell: bash
 
       - name: Run Data Tests
         run: |
           echo "Hello, Windows"
+        shell: bash
