--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -29,6 +29,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Setup MSYS2
         uses: msys2/setup-msys2@v2
+        with:
+          install: cc gcc make
       - name: Setup python
         uses: actions/setup-python@v2
         with:
