--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -27,10 +27,6 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-      - name: Setup MSYS2
-        uses: msys2/setup-msys2@v2
-        with:
-          install: gcc make
       - name: Setup python
         uses: actions/setup-python@v2
         with:
@@ -45,9 +41,9 @@ jobs:
           which ls
           gcc --version
           python3 -m setup-dep
-        shell: msys2 {0}
+        shell: bash
 
       - name: Run Data Tests
         run: |
           echo "Hello, Windows"
-        shell: msys2 {0}
+        shell: bash
