--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -27,6 +27,8 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+      - name: Add msbuild to PATH
+        uses: microsoft/setup-msbuild@v1.0.2
       - name: Setup python
         uses: actions/setup-python@v2
         with:
@@ -34,9 +36,9 @@ jobs:
           architecture: 'x64'
 
       # Runs a set of commands using the runners shell
-      - name: Run Util Tests
+      - name: Install Dependencies
         run: |
-          echo "Hello, Windows!"
+
       - name: Run Data Tests
         run: |
           echo "Hello, Windows"
