--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -36,7 +36,7 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Install Dependencies
         run: |
-          cd Dependencies/
+          cd dependencies/
           echo $PATH
           which ls
           sudo python3 -m setup-dep
