--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -41,7 +41,9 @@ jobs:
           which ls
           sudo python3 -m setup-dep
 
-      - name: Run Data Tests
+      - name: Run Util Tests
         run: |
-          echo "Hello, Ubuntu!"
+          cd test
+          cd util-tests
+          python3 -m pytest -v
   
