--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -39,6 +39,8 @@ jobs:
       - name: Install Dependencies
         run: |
 
-      - name: Run Data Tests
+      - name: Run Util Tests
         run: |
-          echo "Hello, Windows"
+          cd test
+          cd util-tests
+          python3 -m pytest -v
