--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -38,6 +38,9 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Install Dependencies
         run: |
+          cd test
+          pip3 install -r requirements.txt
+          cd ..
 
       - name: Run Util Tests
         run: |
