--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -36,12 +36,17 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Install Dependencies
         run: |
+          cd test
+          pip3 install -r requirements.txt
+          cd ..
           cd dependencies/
           echo $PATH
           which ls
           sudo python3 -m setup-dep
 
-      - name: Run Data Tests
+      - name: Run Util Tests
         run: |
-          echo "Hello, Ubuntu!"
+          cd test
+          cd util-tests
+          python3 -m pytest -v
   
