--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -48,5 +48,5 @@ jobs:
         run: |
           cd test
           cd util-tests
-          python3 -m pytest -v
+          python3 -m pytest -vv
   
